# bazel-react-example

./: .bazelignore  .gitignore  BUILD.bazel  MODULE.bazel  package.json  pnpm-lock.yaml  rsbuild.config.js  tsconfig.json
src/: App.tsx  index.tsx
