bazel_dep(name="aspect_rules_js", version="2.3.3")
bazel_dep(name="bazel_skylib", version="1.7.1")
bazel_dep(name="rules_nodejs", version="6.3.4")

node = use_extension("@rules_nodejs//:extension.bzl", "node", dev_dependency=True)
node.toolchain(node_version="22.14.0")

npm = use_extension("@aspect_rules_js//npm:extensions.bzl", "npm",dev_dependency=True)
npm.npm_translate_lock(
  name="npm",
  pnpm_lock="//:pnpm-lock.yaml"
)

use_repo(npm, "npm")
